// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`nav links authenticated matches snapshot 1`] = `
<div
  className="sc-fzplWN fTyIJW"
  onClick={[Function]}
>
  <div>
    <button
      className="sc-AxjAm iwCWZU"
    >
      Features
    </button>
    <button
      className="sc-AxjAm iwCWZU"
    >
      Pricing
    </button>
    <button
      className="sc-AxjAm iwCWZU resourcesBtn"
    >
      Resources
    </button>
  </div>
  <div
    data-testid="authBtns"
  >
    <a
      href="/logout"
      onClick={[Function]}
    >
      <button
        className="sc-AxirZ fTDgvF"
      >
        Logout
      </button>
    </a>
  </div>
</div>
`;

exports[`nav links not-authenticated matches snapshot 1`] = `
<div
  className="sc-fzplWN fTyIJW"
  onClick={[Function]}
>
  <div>
    <button
      className="sc-AxjAm iwCWZU"
    >
      Features
    </button>
    <button
      className="sc-AxjAm iwCWZU"
    >
      Pricing
    </button>
    <button
      className="sc-AxjAm iwCWZU resourcesBtn"
    >
      Resources
    </button>
  </div>
  <div
    data-testid="authBtns"
  >
    <a
      href="/login"
      onClick={[Function]}
    >
      <button
        className="sc-AxjAm iwCWZU"
      >
        Login
      </button>
    </a>
    <a
      href="/signup"
      onClick={[Function]}
    >
      <button
        className="sc-AxirZ fTDgvF"
      >
        Sign Up
      </button>
    </a>
  </div>
</div>
`;
